# serializer version: 1
# name: test_forecasts[ConfigurationStyle.LEGACY-config0]
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.LEGACY-config0].1
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.LEGACY-config0].2
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'fog',
          'datetime': '2023-02-17T14:00:00+00:00',
          'is_daytime': True,
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.LEGACY-config0].3
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 16.9,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config1]
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config1].1
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config1].2
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'fog',
          'datetime': '2023-02-17T14:00:00+00:00',
          'is_daytime': True,
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config1].3
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 16.9,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config3]
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config3].1
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config3].2
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'fog',
          'datetime': '2023-02-17T14:00:00+00:00',
          'is_daytime': True,
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.MODERN-config3].3
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 16.9,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config2]
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config2].1
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config2].2
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'fog',
          'datetime': '2023-02-17T14:00:00+00:00',
          'is_daytime': True,
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config2].3
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 16.9,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config4]
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config4].1
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config4].2
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'fog',
          'datetime': '2023-02-17T14:00:00+00:00',
          'is_daytime': True,
          'temperature': 14.2,
        }),
      ]),
    }),
  })
# ---
# name: test_forecasts[ConfigurationStyle.TRIGGER-config4].3
  dict({
    'weather.template_weather': dict({
      'forecast': list([
        dict({
          'condition': 'cloudy',
          'datetime': '2023-02-17T14:00:00+00:00',
          'temperature': 16.9,
        }),
      ]),
    }),
  })
# ---
# name: test_restore_weather_save_state
  dict({
    'last_apparent_temperature': None,
    'last_cloud_coverage': None,
    'last_dew_point': None,
    'last_humidity': 25.0,
    'last_ozone': None,
    'last_pressure': None,
    'last_temperature': 15.0,
    'last_uv_index': None,
    'last_visibility': None,
    'last_wind_bearing': None,
    'last_wind_gust_speed': None,
    'last_wind_speed': None,
  })
# ---
# name: test_setup_config_entry
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'attribution': 'Powered by Home Assistant',
      'friendly_name': 'My template',
      'humidity': 50,
      'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
      'supported_features': 0,
      'temperature': 20.0,
      'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
      'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
      'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.my_template',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
